
2/9/22: Updated the generation of the first central map to guarantee a poke mart and center will spawn.

2/11/22: Added main poke.c file to run the main program. Updated makefile to handle the new file. Created a header file for terrain.c

2/13/22: Created distance map, Dijkstra’s Algorithm, and helper methods. Took way to long to get a result that may or may not work. Currently does not connect to the main running program. Temp main in distanceMap.c to check if everything kinda works.

2/14/22: Finished the distance map creating and function to print the distance map. Wrapped up the distanceMap.c into a header file removing the main from it and changing it to the function to call to set an array to a distance array given enough information. Connected the distanceMap.h file to the main poke file. This allows distance maps to be printed every time one moves around in the overall map. Added a function in terrain to randomly set player coordinates on the map.

2/20/22: Started and completed the  the characters structs and functionality to create a character map, and printing them on the terrain map.

2/24/22: Started the functionality to move characters around on the map. Additionally, added the ability to specify how many characters spawn.

2/27/22: Trying to fix issues with the distance maps not functioning properly on different areas on the map. I believe this to be fixed. Currently fixing movement of characters as they tend to move awkwardly.

3/1/22: Fixed all movement issues. Changed order of which characters take actions. Now they get removed from queue, determine their move, move, and then get replaced in queue instead of determining next move after moving.

3/7/22: Updated the use of the switch to be more understandable and updated the README

3/21/22: Implemented player movement, curses visuals, and started the list of trainers.

3/23/22: Finished the trainer list and movement between maps. Currently there are two know bugs see README.